# Simple-Raytracer

./: CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  interval.h  main.cpp  material.h  ray.h  raytracer.h  sphere.h  vec3.h
build_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_windows/Raytracer.dir/Debug/: Raytracer.exe.recipe  Raytracer.ilk
build_windows/Raytracer.dir/Debug/Raytracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_windows/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
